[package]
name = "esp32-celsius"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Kolehmainen"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
esp-idf-hal = "0.38"
anyhow = "1"
embedded-hal = "0.2.7"

# [build-dependencies]
# embuild = "0.28"
# anyhow = "1"