[package]
name = "esp32-celsius"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Kolehmainen"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# embedded-hal = { version = "0.2.7", features = ["unproven"] }
esp32c3-hal = "0.2.0"
riscv-rt         = { version = "0.9.0", optional = true }
esp-backtrace     = { version = "0.2.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
dht11 = "0.3.1"

[features]
default = ["rt"]
rt = ["riscv-rt"]
